--- a/Lab2/site1/style.css
+++ b/Lab2/site1/style.css
@@ -26,13 +26,13 @@ text-align: center;
 .number-container {
     display: flex;
     justify-content: space-between;
-    max-width: 400px; /* Adjust the width as needed */
-    margin: 0 auto; /* Center the container */
+    max-width: 400px;
+    margin: 0 auto; 
 }
 
 .number {
     border: 1px solid #000;
     padding: 10px;
     text-align: center;
-    width: 75px; /* Adjust the width as needed */
+    width: 75px; 
 }
