Lab7-conditional-rendering-style

--- a/Lab7/app1/src/components/Movie.css
+++ b/Lab7/app1/src/components/Movie.css
@@ -51,3 +51,14 @@ body{
 .movie:hover .movie-overview{
     transform: translateY(0%);
 }
+.green {
+    color: green;
+  }
+  
+  .yellow {
+    color: yellow;
+  }
+  
+  .red {
+    color: red;
+  }
